--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.1.0",
     "lodash": "^4.17.11",
     "mint-ui": "^2.2.13",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
