--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nutui/nutui": "^2.0.8",
+    "@ztree/ztree_v3": "^3.5.40",
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mint-ui": "^2.2.13",
     "v-charts": "^1.19.0",
