--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mint-ui": "^2.2.13",
+    "normalizr": "^3.4.1",
     "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
